# JNI

./: README.md
Android_Player/app/: CMakeLists.txt  build.gradle
Android_Player/app/src/androidTest/java/com/ffmpeg/player/: ExampleInstrumentedTest.java
Android_Player/app/src/main/: AndroidManifest.xml
Android_Player/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  ffmpeg.cpp  ffmpeg.h  macro.h  player_jni.cpp  safe_queue.h
Android_Player/app/src/main/java/com/ffmpeg/player/: FfmpegPlayer.java  LiveAdapter.java  MainActivity.java  MainActivity_.java  PlayActivity.java
Android_Player/app/src/main/res/layout/: activity_main_.xml  activity_play.xml
Android_Player/app/src/main/res/values/: strings.xml
Android_Player/app/src/test/java/com/ffmpeg/player/: ExampleUnitTest.java
Android_Pusher/app/: CMakeLists.txt  build.gradle
Android_Pusher/app/src/androidTest/java/com/android/pusher/: ExampleInstrumentedTest.java
Android_Pusher/app/src/main/: AndroidManifest.xml
Android_Pusher/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
Android_Pusher/app/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c
Android_Pusher/app/src/main/cpp/libs/armeabi-v7a/pkgconfig/: x264.pc
Android_Pusher/app/src/main/java/com/android/pusher/: MainActivity.java
Android_Pusher/app/src/main/java/com/android/pusher/live/: LivePusher.java
Android_Pusher/app/src/main/res/values/: strings.xml
Android_Pusher/app/src/test/java/com/android/pusher/: ExampleUnitTest.java
JniSimple/app/: CMakeLists.txt  build.gradle
JniSimple/app/src/androidTest/java/com/ht/jni/: ExampleInstrumentedTest.java
JniSimple/app/src/main/: AndroidManifest.xml
JniSimple/app/src/main/cpp/: native-lib.cpp
JniSimple/app/src/main/java/com/ht/jni/: Bean.java  Bean2.java  MainActivity.java
JniSimple/app/src/main/res/values/: strings.xml
JniSimple/app/src/test/java/com/ht/jni/: ExampleUnitTest.java
(+22 files in other folders)
